update Career section content

--- a/index.html
+++ b/index.html
@@ -213,20 +213,6 @@
                         <h3>Experience</h3>
                         <div class="contents">
                             <ul>
-                                <li><span>2023 - 2024</span> Certificate in
-                                    Full
-                                    Stack Web Development, CarreerFoundry
-                                </li>
-                                <div class="discription-box">
-                                    <small> + </small>
-                                    <p class="experience-detail">900+ hours of
-                                        immersive, project-based
-                                        training in JavaScript, HTML, CSS, and
-                                        the most popular web development
-                                        frameworks, libraries, and tech stacks
-                                        (MERN and MEAN), as well as other web
-                                        dev tools.</p>
-                                </div>
                                 <li><span>2023</span> Software
                                     developer,
                                     FERCHAU GmbH (Pulsotronic GmbH
@@ -262,6 +248,23 @@
                         <h3>Education</h3>
                         <div class="contents">
                             <ul>
+                                <li><span>2023 - 2024</span> Certificate in
+                                    Full
+                                    Stack Web Development, CarreerFoundry
+                                </li>
+                                <div class="discription-box">
+                                    <small> + </small>
+                                    <p class="experience-detail">
+                                        900+ hours of immersive, project-based
+                                        training in JavaScript, HTML, CSS,
+                                        NodeJs, React.js, Angular, React Native,
+                                        JQuery, AJAX, DataBase, and more. <br>
+                                        Gain hands-on experience by completing
+                                        6+ projects in MERN &amp; MEAN tech
+                                        stacks, React Native, plus other web
+                                        development and deployment tools.
+                                    </p>
+                                </div>
                                 <li><span>2019 - 2022</span> M.S. in Applied
                                     Computer Science from TU Bergakademie
                                     Freiberg </li>
