change profile photo

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="hero-yellow">
-                <img src="img/MW_profile_small.png"
+                <img src="img/MW_profile_medium.png"
                     alt="Mezekr profile portrait photograph">
             </div>
         </section>
