update hero section profile about content

--- a/index.html
+++ b/index.html
@@ -69,21 +69,22 @@
                     </h1>
                     <p><small>Full Stack Web Developer</small> based in
                         Germany.
-                        <span>Leveraging my expertise in software development, I
-                            turn innovative ideas into real, functional web
-                            apps with passion and precision!</span>
-                        <span> I am a software developer with an M.Sc. in
-                            Applied Computer Science.
-                            I specialized in full-stack web development by
-                            completing CareerFoundry's over 900 hours
-                            comprehensive, hands-on, project-based Full-stack
-                            web development program.<br><br>
-                            Now, combining my skills with my professional
-                            aspirations, I am excited to work in full-stack to
-                            turn clients' ideas into reality.
-                            My two years of experience in data processing and
-                            machine learning will leverage my expertise in web
-                            development.</span>
+                        <span>
+                            Develop and implement responsive and functional
+                            websites, web apps, and mobile apps that meet
+                            expectations.
+                        </span>
+                        <span>With a Master's degree in Applied Computer
+                            Science and 2 year experience, I've honed my skills
+                            in full-stack web
+                            development through CareerFoundry's comprehensive,
+                            project-based 900+ hour program.
+                            <span>
+                                Feel free to get in touch to turn your
+                                innovative ideas or challenges into a fully
+                                working website or web application.
+                            </span>
+                        </span>
 
                     </p>
                     <div class="call-to-action">
@@ -108,7 +109,7 @@
             </div>
             <div class="hero-yellow">
                 <img src="img/MW_profile_medium.png"
-                    alt="Mezekr profile portrait photograph">
+                    alt="Mezekr profile portrait photograph" width="100%">
             </div>
         </section>
 
