--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                             database. It provides user authentication and access
                             to the data via the RESTful API.
                         </p>
-                        <div class="teck-stack">
-                            <h4>Teck stack</h4>
+                        <div class="tech-stack">
+                            <h4>Tech Stack</h4>
                             <ul>
                                 <li>JavaScript</li>
                                 <li>Nodejs</li>
@@ -352,8 +352,8 @@
                             edit data. It provides the ability to search for a
                             movie, save/delete it to/from the favorites.
                         </p>
-                        <div class="teck-stack">
-                            <h4>Teck stack</h4>
+                        <div class="tech-stack">
+                            <h4>Tech Stack</h4>
                             <ul>
                                 <li>Html</li>
                                 <li>CSS</li>
@@ -428,8 +428,8 @@
                             Pokémon
                             card and search for a Pokémon by name.
                         </p>
-                        <div class="teck-stack">
-                            <h4>Teck stack</h4>
+                        <div class="tech-stack">
+                            <h4>Tech Stack</h4>
                             <ul>
                                 <li>Html</li>
                                 <li>CSS</li>
@@ -484,8 +484,8 @@
                             and edit data. It provides the ability to search for
                             a movie, save/delete it to/from the favorites.
                         </p>
-                        <div class="teck-stack">
-                            <h4>Teck stack</h4>
+                        <div class="tech-stack">
+                            <h4>Tech Stack</h4>
                             <ul>
                                 <li>Angular 17</li>
                                 <li>SCSS</li>
@@ -540,8 +540,8 @@
                             chat interface and image and location sharing
                             options.
                         </p>
-                        <div class="teck-stack">
-                            <h4>Teck stack</h4>
+                        <div class="tech-stack">
+                            <h4>Tech Stack</h4>
 
                             <ul>
                                 <li>React Native</li>
@@ -599,8 +599,8 @@
                             React
                             using a test-driven development (TDD) technique.
                         </p>
-                        <div class="teck-stack">
-                            <h4>Teck stack</h4>
+                        <div class="tech-stack">
+                            <h4>Tech Stack</h4>
                             <ul>
                                 <li>React</li>
                                 <li>AWS Lamda</li>
