--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="css/style.production.css">
-    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
 
 </head>
@@ -121,161 +121,173 @@
                 <small> About me</small>
                 Skills
             </h2>
-            <div class="holder-blue">
-
-                <div class="left-column">
-                    <div class="skills-header">
-                        <h3>What I do</h3>
-                        <p>I enjoy the process of
-                            designing, building, testing, and deploying complete
-                            web
-                            applications from start to finish. Below are
-                            some of
-                            the
-                            skills, technologies, and tools I have experience
-                            with.
-                        </p>
-                    </div>
-                    <div class="dev-skill">
-                        <h3>Front-end</h3>
-                        <div class="discription-box">
-                            <small> + </small>
-                            <p> Turn
-                                UI/UX design into an actual web or app.
+            <div class="career_wrapper">
+                <div class="career-column">
+                    <div class="left-column">
+                        <div class="skills-header">
+                            <h3>What I do</h3>
+                            <p>I enjoy the process of
+                                designing, building, testing, and deploying
+                                complete
+                                web
+                                applications from start to finish. Below are
+                                some of
+                                the
+                                skills, technologies, and tools I have
+                                experience
+                                with.
                             </p>
                         </div>
-                        <ul>
-                            <li>Html</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
-                            <li>Angular</li>
-                            <li> React Native</li>
-                            <li>SASS/SCSS</li>
-                            <li> Bootstrap</li>
-                            <li> Redux</li>
-                            <li>Tailwind CSS</li>
-                        </ul>
-                    </div>
-                    <div class="dev-skill">
-                        <h3>Back-end</h3>
-                        <div class="discription-box">
-                            <small> + </small>
-                            <p>Implement server-side logic, database
-                                integration, and API connectivity to support
-                                web/app with data for real-time interaction.</p>
+                        <div class="dev-skill">
+                            <h3>Front-end</h3>
+                            <div class="description-box">
+                                <small> + </small>
+                                <p> Turn
+                                    UI/UX design into an actual web or app.
+                                </p>
+                            </div>
+                            <ul>
+                                <li>Html</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>React</li>
+                                <li>Angular</li>
+                                <li> React Native</li>
+                                <li>SASS/SCSS</li>
+                                <li> Bootstrap</li>
+                                <li> Redux</li>
+                                <li>Tailwind CSS</li>
+                            </ul>
                         </div>
-                        <ul>
-                            <li>Node.js</li>
-                            <li>Express</li>
-                            <li>MongoDB / MySQL</li>
-                            <li>Restful API</li>
-                            <li>Docker</li>
-                            <li>JWT Auth</li>
-                            <li>AWS Lamda</li>
-                            <li>Serverless</li>
-                            <li>Firebase</li>
-                            <li>Vite</li>
-                            <li>Python</li>
-                            <li>Django</li>
+                        <div class="dev-skill">
+                            <h3>Back-end</h3>
+                            <div class="description-box">
+                                <small> + </small>
+                                <p>Implement server-side logic, database
+                                    integration, and API connectivity to support
+                                    web/app with data for real-time interaction.
+                                </p>
+                            </div>
+                            <ul>
+                                <li>Node.js</li>
+                                <li>Express</li>
+                                <li>MongoDB / MySQL</li>
+                                <li>Restful API</li>
+                                <li>Docker</li>
+                                <li>JWT Auth</li>
+                                <li>AWS Lamda</li>
+                                <li>Serverless</li>
+                                <li>Firebase</li>
+                                <li>Vite</li>
+                                <li>Python</li>
+                                <li>Django</li>
 
-                        </ul>
-                    </div>
-                    <div class="dev-skill">
-                        <h3>ML / Data processing</h3>
-                        <div class="discription-box">
-                            <small> + </small>
-                            <p>
-                                Data Preprocessing, Analysis, and Visualization
-                                for building a Machine learning model.
-                            </p>
+                            </ul>
                         </div>
-                        <ul>
-                            <li>Python</li>
-                            <li>Numpy</li>
-                            <li>pandas</li>
-                            <li>Plotly</li>
-                            <li>Matplotlip</li>
-                            <li>Scipy</li>
-                            <li>Keras</li>
-                            <li>TensorFlow</li>
-                            <li>Jupyter Notebook</li>
-                        </ul>
+                        <div class="dev-skill">
+                            <h3>ML / Data processing</h3>
+                            <div class="description-box">
+                                <small> + </small>
+                                <p>
+                                    Data Preprocessing, Analysis, and
+                                    Visualization
+                                    for building a Machine learning model.
+                                </p>
+                            </div>
+                            <ul>
+                                <li>Python</li>
+                                <li>Numpy</li>
+                                <li>pandas</li>
+                                <li>Plotly</li>
+                                <li>Matplotlip</li>
+                                <li>Scipy</li>
+                                <li>Keras</li>
+                                <li>TensorFlow</li>
+                                <li>Jupyter Notebook</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-
-                <div class="right-column">
-                    <div class="skills-header">
-                        <h3>Career</h3>
-                        <p>I have an M.Sc. in Applied Computer Science and
-                            specialized in full-stack web development through
-                            CareerFoundry's 900+ hours program.</p>
-                    </div>
-
-                    <div class="career experience">
-                        <h3>Experience</h3>
-                        <div class="contents">
-                            <ul>
-                                <li><span>2023</span> Software
-                                    developer,
-                                    FERCHAU GmbH (Pulsotronic GmbH
-                                    &amp Co. KG)</li>
-                                <div class="discription-box">
-                                    <small> + </small>
-                                    <p class="experience-detail">
-                                        Designed and developed a software module
-                                        to
-                                        preprocess, cleanse, and apply
-                                        statistical and
-                                        frequency analysis to digital audio
-                                        signals.
-                                    </p>
-                                </div>
-                                <li><span>2020 - 2022</span> Research
-                                    assistant
-                                    on research projects, TU Bergakademie
-                                    Freiberg.
-                                </li>
-                                <div class="discription-box">
-                                    <small> + </small>
-                                    <p class="experience-detail"> DiP-iT
-                                        (Digital
-                                        Programming in Teams) research projects.
-                                    </p>
-                                </div>
-                            </ul>
+                <div class="career-column">
+                    <div class="right-column">
+                        <div class="skills-header">
+                            <h3>Career</h3>
+                            <p>I have an M.Sc. in Applied Computer Science and
+                                specialized in full-stack web development
+                                through
+                                CareerFoundry's 900+ hours program.</p>
                         </div>
-                    </div>
 
-                    <div class="career education">
-                        <h3>Education</h3>
-                        <div class="contents">
-                            <ul>
-                                <li><span>2023 - 2024</span> Certificate in
-                                    Full
-                                    Stack Web Development, CarreerFoundry
-                                </li>
-                                <div class="discription-box">
-                                    <small> + </small>
-                                    <p class="experience-detail">
-                                        900+ hours of immersive, project-based
-                                        training in JavaScript, HTML, CSS,
-                                        NodeJs, React.js, Angular, React Native,
-                                        JQuery, AJAX, DataBase, and more. <br>
-                                        Gain hands-on experience by completing
-                                        6+ projects in MERN &amp; MEAN tech
-                                        stacks, React Native, plus other web
-                                        development and deployment tools.
-                                    </p>
-                                </div>
-                                <li><span>2019 - 2022</span> M.S. in Applied
-                                    Computer Science from TU Bergakademie
-                                    Freiberg </li>
-                                <li><span>2008 - 2013</span>B.S. in Computer
-                                    Engineering, Eritrean Institute of
-                                    Technology, Mai-Nefhi</li>
+                        <div class="career experience">
+                            <h3>Experience</h3>
+                            <div class="contents">
+                                <ul>
+                                    <li><span>2023</span> Software
+                                        developer,
+                                        FERCHAU GmbH (Pulsotronic GmbH
+                                        &amp Co. KG)</li>
+                                    <div class="description-box">
+                                        <small> + </small>
+                                        <p class="experience-detail">
+                                            Designed and developed a software
+                                            module to preprocess, cleanse, and
+                                            apply
+                                            statistical and frequency analysis
+                                            to digital audio
+                                            signals.
+                                        </p>
+                                    </div>
+                                    <li><span>2020 - 2022</span> Research
+                                        assistant
+                                        on research projects, TU Bergakademie
+                                        Freiberg.
+                                    </li>
+                                    <div class="description-box">
+                                        <small> + </small>
+                                        <p class="experience-detail"> DiP-iT
+                                            (Digital
+                                            Programming in Teams) research
+                                            projects.
+                                        </p>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
 
-                            </ul>
+                        <div class="career education">
+                            <h3>Education</h3>
+                            <div class="contents">
+                                <ul>
+                                    <li><span>2023 - 2024</span> Certificate in
+                                        Full
+                                        Stack Web Development, CarreerFoundry
+                                    </li>
+                                    <div class="description-box">
+                                        <small> + </small>
+                                        <p class="experience-detail">
+                                            900+ hours of immersive,
+                                            project-based
+                                            training in JavaScript, HTML, CSS,
+                                            NodeJs, React.js, Angular, React
+                                            Native,
+                                            JQuery, AJAX, DataBase, and more.
+                                            <br>
+                                            Gain hands-on experience by
+                                            completing
+                                            6+ projects in MERN &amp; MEAN tech
+                                            stacks, React Native, plus other web
+                                            development and deployment tools.
+                                        </p>
+                                    </div>
+                                    <li><span>2019 - 2022</span> M.S. in Applied
+                                        Computer Science from TU Bergakademie
+                                        Freiberg </li>
+                                    <li><span>2008 - 2013</span>B.S. in Computer
+                                        Engineering, Eritrean Institute of
+                                        Technology, Mai-Nefhi</li>
+
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
