--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.production.css">
     <script src="js/scripts.js" defer></script>
 
 </head>
