update hero section profile content

--- a/index.html
+++ b/index.html
@@ -71,19 +71,25 @@
                     <p><small>Full Stack Web Developer</small> based in
                         Germany.
                         <span>
-                            Develop and implement responsive and functional
-                            websites, web apps, and mobile apps that meet
-                            expectations.
+                            I'm passionate about creating and implementing
+                            responsive and functional websites, web
+                            applications, and mobile apps.
                         </span>
-                        <span>With a Master's degree in Applied Computer
-                            Science and 2 year experience, I've honed my skills
-                            in full-stack web
-                            development through CareerFoundry's comprehensive,
-                            project-based 900+ hour program.
+                        <span>To specialize in full-stack web development, I
+                            completed CareerFoundry's Full-Stack Web Developer
+                            programme, learning <strong> JavaScript</strong>,
+                            <strong>,Nodejs </strong>, <strong>React</strong>,
+                            <strong>MongoDB</strong>, <strong>React
+                                Native</strong> and more.
                             <span>
-                                Feel free to get in touch to turn your
-                                innovative ideas or challenges into a fully
-                                working website or web application.
+                                Complementing my extensive technical expertise,
+                                I hold a Master's Degree in Applied Computer
+                                Science and have 2 years' experience in data
+                                processing using Python.
+                            </span>
+                            <span>
+                                Get in touch to explore how I can use my
+                                expertise to solve your challenges.
                             </span>
                         </span>
 
