update hero section content

--- a/index.html
+++ b/index.html
@@ -71,25 +71,34 @@
                     <p><small>Full Stack Web Developer</small> based in
                         Germany.
                         <span>
-                            I'm passionate about creating and implementing
-                            responsive and functional websites, web
-                            applications, and mobile apps.
+                            I have a strong foundation in Computer Science with
+                            hands-on experience in web development, machine
+                            learning and data processing.
                         </span>
-                        <span>To specialize in full-stack web development, I
-                            completed CareerFoundry's Full-Stack Web Developer
-                            programme, learning <strong> JavaScript</strong>,
-                            <strong>,Nodejs </strong>, <strong>React</strong>,
+                        <span>
+                            I expanded my expertise to full-stack web
+                            development recently, having completed
+                            CareerFoundry's Full-Stack Web Developer certificate
+                            program.
+                        </span>
+                        <span>My skills include <strong> JavaScript,
+                                Typescript</strong>,
+                            <strong>,NodeJs </strong>, <strong>ReactJs</strong>,
                             <strong>MongoDB</strong>, <strong>React
-                                Native</strong> and more.
+                                Native</strong>, <strong>Python</strong> and
+                            more.
+                        </span>
+                        <span>
                             <span>
-                                Complementing my extensive technical expertise,
-                                I hold a Master's Degree in Applied Computer
-                                Science and have 2 years' experience in data
-                                processing using Python.
+                                I enjoy breaking down complex problems,
+                                optimising systems and building solutions that
+                                work at scale. I'm always exploring new
+                                technologies.
                             </span>
                             <span>
-                                Get in touch to explore how I can use my
-                                expertise to solve your challenges.
+                                I look for opportunities to apply my skills,
+                                refine my knowledge and contribute to impactful
+                                projects.
                             </span>
                         </span>
 
